a working example of locales using query

--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -69,7 +69,7 @@ block content
 
     .row.first-row
       .col-sm-4
-        h2.pitch-header.fw No Email Required &nbsp
+        h2.pitch-header.fw #{__('No Email Required')} &nbsp
           i.fa.fa-bolt
         p.explainer.fw Start your channel on #{brandName}
         p.fw without having to verify your email
