updated spacing characters in home.pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -54,7 +54,7 @@ html
 
     block extra_js
 
-
+  // TODO: dir='RTL" if localization is ar or any other RTL languages
   body(style="overflow-x:hidden;touch-action: manipulation;" id="body" class="dark-mode")
 
 
