--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -69,17 +69,17 @@ block content
 
     .row.first-row
       .col-sm-4
-        h2.pitch-header.fw #{__('No Email Required')} &nbsp
+        h2.pitch-header.fw #{__('No Email Required ')}
           i.fa.fa-bolt
         p.explainer.fw #{__('Start your channel on {{brandName}}', {brandName: brandName})}
         p.fw #{__('without having to verify your email')}
       .col-sm-4
-        h2.pitch-header.fw #{__('Video, Audio, Images')} &nbsp
+        h2.pitch-header.fw #{__('Video, Audio, Images ')}
           i.fa.fa-thumbs-o-up
         p.explainer.fw #{__('Over 30 file formats are supported')}
         p.fw #{__('between video, audio and image uploads')}
       .col-sm-4
-        h2.pitch-header.fw #{__('100% Open Source')} &nbsp
+        h2.pitch-header.fw #{__('100% Open Source ')}
           i.fa.fa-space-shuttle
         p.explainer.fw #{__('Create your own {{brandName}} instance', {brandName: brandName})}
         p.fw #{__('in just minutes following our tutorials')}
@@ -87,17 +87,17 @@ block content
 
     .row.second-row
       .col-sm-4
-        h2.pitch-header.fw #{__('{{channelAmount}} Channels', {channelAmount: channelAmount})} &nbsp
+        h2.pitch-header.fw #{__('{{channelAmount}} Channels ', {channelAmount: channelAmount})}
           i.fa.fa-users
         p.explainer.fw #{__('The number of creators who have')}
         p.fw #{__('chosen {{brandName}} for their media hosting', {brandName: brandName})}
       .col-sm-4
-        h2.pitch-header.fw #{__('{{mediaAmount}} Uploads', {mediaAmount: mediaAmount})} &nbsp
+        h2.pitch-header.fw #{__('{{mediaAmount}} Uploads ', {mediaAmount: mediaAmount})}
           i.fa.fa-upload
         p.explainer.fw #{__('The number of  times creators have')}
         p.fw #{__('chosen {{brandName}} for their content hosting', {brandName: brandName})}
       .col-sm-4
-        h2.pitch-header.fw #{__('{{viewAmount}} Views', {viewAmount: viewAmount})} &nbsp
+        h2.pitch-header.fw #{__('{{viewAmount}} Views ', {viewAmount: viewAmount})}
           i.fa.fa-video
         p.explainer.fw #{__('The number of times people have')}
         p.fw #{__('enjoyed the innovative new platform')}
