--- a/views/media.pug
+++ b/views/media.pug
@@ -287,6 +287,18 @@ block content
             background-color: #141414;
         }
 
+        .op68 {
+            opacity: 0.8;
+        }
+
+        .op80 {
+            opacity: 0.8
+        }
+
+        .postCommentButton {
+            opacity: 0.85
+        }
+
 
 
     br
@@ -463,20 +475,20 @@ block content
                         div
 
                             a(href=`https://www.facebook.com/sharer/sharer.php?u=${url}` target="_blank")
-                                img.extraButton(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
+                                img.extraButton.op80(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
                             a(href=`https://twitter.com/share?url=${url}` target="_blank")
-                                img.extraButton(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
+                                img.extraButton.op80(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
                             a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on ${brandName}: ${url}`, title='Share by Email')
-                                img.extraButton(src='/images/email-share.jpg' style="margin-left:10px;")
+                                img.extraButton.op80(src='/images/email-share.jpg' style="margin-left:10px;")
 
 
                         br
 
-                        button.extraButton.btn.btn-success.copy-button(style="margin-right:10px;padding:4px 12px" data-clipboard-text=`${upload.title} \n\n${url}`)
+                        button.extraButton.btn.btn-success.copy-button.op60(style="margin-right:10px;padding:4px 12px;opacity:0.8;" data-clipboard-text=`${upload.title} \n\n${url}`)
                             i.fa.fa-info.fw
                             | Copy Details
 
-                        button.extraButton.btn.btn-success.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
+                        button.extraButton.btn.btn-success.copy-button.op60(style="padding:4px 12px;opacity:0.8;" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
                             i.fa.fa-info.fw
                             | With User Info
 
@@ -650,7 +662,7 @@ block content
                                     input(type="hidden" name="upload" id="upload" value=upload._id)
                                     textarea.commentInput.fw(name="comment" id="comment" minlength="2" style="width:800px;height:129px;max-width:100%;background-color:#151515;color:white;")
                                     br
-                                    input.fw.btn.btn-md.btn-success(type='submit' value="Post Comment" style="border-radius:4px")
+                                    input.fw.btn.btn-md.btn-success.postCommentButton(type='submit' value="Post Comment" style="border-radius:4px")
                     else
                         div.comment-form.form-group.no-user-comment-form
                             form.form-horizontal.overall-comment-form(class="comment-form")
@@ -658,7 +670,7 @@ block content
                                 br
                                 textarea.commentInput.fw(name="comment" id="comment" minlength="2" style="width:800px;height:129px;max-width:100%;background-color:#151515;color:white;")
                                 br
-                                input.fw.btn.btn-md.btn-success(type='submit' value="Post Comment" style="border-radius:4px")
+                                input.fw.btn.btn-md.btn-success.postCommentButton(type='submit' value="Post Comment" style="border-radius:4px;")
 
 
                 // ** COMMENT DISPLAY **
@@ -715,7 +727,7 @@ block content
                                                         input(type="hidden" name="commentId" id="commentId" value=comment.id)
                                                         textarea.fw(name="comment" id="comment" minlength="2" style="width:400px;max-width:100%;")
                                                         br
-                                                        input.fw.btn.btn-md.btn-success(type='submit' value="Post Comment" style="border-radius:4px")
+                                                        input.fw.btn.btn-md.btn-success.postCommentButton(type='submit' value="Post Comment" style="border-radius:4px")
                                                         br
                                                         br
 
