--- a/views/media.pug
+++ b/views/media.pug
@@ -287,6 +287,14 @@ block content
             background-color: #141414;
         }
 
+        .op60 {
+            opacity: 0.6;
+        }
+
+        .op70 {
+            opacity: 0.7
+        }
+
         .op68 {
             opacity: 0.8;
         }
@@ -297,6 +305,28 @@ block content
 
         .postCommentButton {
             opacity: 0.85
+        }
+
+        .smallerInfo {
+            font-size: 12px;
+        }
+
+        /* there's a small bug because the JS doesn't currently change the class
+        but it works well enough */
+        .unsubscribeButton {
+            opacity: 0.7 !important;;
+        }
+
+        .subscribeButton {
+            opacity: 0.85 !important;
+        }
+
+        /* anything below this width */
+        @media (max-width: 400px) {
+
+            .emailShareButton, .facebookShareButton, .twitterShareButton {
+                margin-left: 5px !important;
+            }
         }
 
 
@@ -420,11 +450,13 @@ block content
 
 
 
+
+
                 if upload.visibility != 'pending'
                     if alreadySubbed
-                        button.subscribe.btn.fw.btn-danger(style="border-radius:4px;opacity:0.75;") Unsubscribe (#{subscriberAmount})
+                        button.subscribe.btn.fw.btn-danger.op80.unsubscribeButton(style="border-radius:4px;") Unsubscribe (#{subscriberAmount})
                     else
-                        button.subscribe.btn.fw.btn-success(style="border-radius:4px;opacity:0.75;") Subscribe (#{subscriberAmount})
+                        button.subscribe.btn.fw.btn-success.op80.subscribeButton(style="border-radius:4px;") Subscribe (#{subscriberAmount})
                     br
                     br
 
@@ -475,20 +507,20 @@ block content
                         div
 
                             a(href=`https://www.facebook.com/sharer/sharer.php?u=${url}` target="_blank")
-                                img.extraButton.op80(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
+                                img.extraButton.op80.facebookShareButton(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
                             a(href=`https://twitter.com/share?url=${url}` target="_blank")
-                                img.extraButton.op80(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
+                                img.extraButton.op80.twitterShareButton(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter' style="margin-left:10px;")
                             a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on ${brandName}: ${url}`, title='Share by Email')
-                                img.extraButton.op80(src='/images/email-share.jpg' style="margin-left:10px;")
+                                img.extraButton.op80.emailShareButton(src='/images/email-share.jpg' style="margin-left:10px;")
 
 
                         br
 
-                        button.extraButton.btn.btn-success.copy-button.op60(style="margin-right:10px;padding:4px 12px;opacity:0.8;" data-clipboard-text=`${upload.title} \n\n${url}`)
+                        button.extraButton.btn.btn-success.copy-button.op70.copyDetailsButton(style="margin-right:10px;padding:4px 12px;opacity:0.8;" data-clipboard-text=`${upload.title} \n\n${url}`)
                             i.fa.fa-info.fw
                             | Copy Details
 
-                        button.extraButton.btn.btn-success.copy-button.op60(style="padding:4px 12px;opacity:0.8;" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
+                        button.extraButton.btn.btn-success.copy-button.op70.copyDetailsWithUserInfoButton(style="padding:4px 12px;opacity:0.8;" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName || upload.uploader.channelUrl} \n\n ${url} \n\n #${brandName}`)
                             i.fa.fa-info.fw
                             | With User Info
 
@@ -555,6 +587,8 @@ block content
                 // Upload View Amount
                 h3.fw(style="color:a5a5a5") #{numberWithCommas(upload.views)} Views
 
+
+                // Additional info, including how long ago the upload was, file size, category and rating
                 // Upload time ago, duration and uploader
                 if upload.uploader
                     h4.fw(style="color:a5a5a5")
@@ -573,6 +607,7 @@ block content
                         // TODO: should be able to support MB and GB
                         p.fw.fileSizeText(style="margin-top:15px;color:a5a5a5;") File Size: #{ formattedFileSize }
 
+                    // if there is a category, get the display name for it
                     if upload.category
                         each category in categories
                             if category.name == upload.category
@@ -585,6 +620,8 @@ block content
                                 //        if upload.subcategory == subcategory.name
                                 //            p.fw(style="margin-top:15px;font-size:12px;") Subcategory: #{subcategory.displayName}
 
+
+
                     if maxRatingAllowed !== 'SFW'
                         if upload.rating
                             if upload.rating == 'allAges'
@@ -593,6 +630,14 @@ block content
                                 p.fw(style="margin-top:15px;font-size:12px;") Rating: Not Safe For Work
                             if upload.rating == 'sensitive'
                                 p.fw(style="margin-top:15px;font-size:12px;") Rating: Sensitive (18+)
+
+                    p.smallerInfo.fw.fileSizeText.
+                        Rating: #{convertedRating}
+
+                    // capitalizing the first letter
+                    p.smallerInfo.fw.fileSizeText.
+                        Visibility: #{upload.visibility.charAt(0).toUpperCase() + upload.visibility.slice(1)}
+
 
                     div.editButtonDiv
                         // edit button
