--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -11,6 +11,10 @@ block content
 
 block content
     style.
+        .btn {
+            border-radius: 4px;
+        }
+
         .order-by-dropdown {
             text-align: center;
         }
