--- a/views/account/editUpload.pug
+++ b/views/account/editUpload.pug
@@ -151,31 +151,7 @@ block content
 
                             button.btn.btn.btn-danger.deleteThumbnailButton(type='submit' style="margin-top:20px;margin-bottom:31px;")
                                 i.fa.fa-pencil
-                                | Delete Thumbnail!!!
-                            br
-            //if 1 == 1
-            //    br
-            //    label.col-sm-3.control-label(for='' style="text-align:right;") Upload Thumbnail
-            //        .col-sm-7
-            //            // TODO: need to do the data migration here
-            //            if upload.thumbnails.custom
-            //                img(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="width:301.96px;height:167.969px")
-            //            else
-            //                img(src=upload.customThumbnailUrl style="width:301.96px;height:167.969px")
-            //
-            //            form.form-horizontal.delete-thumbnail-form(action=`${thumbnailServer}/api/upload/${upload.uniqueTag}/thumbnail/delete` method="POST")
-            //                input(type='hidden', name='_csrf', value=_csrf)
-            //                input(type="hidden" name="channelUrl" value=`${user.channelUrl}`)
-            //                input(type="hidden" name="uploadToken" value=`${user.uploadToken}`)
-            //
-            //                br
-            //
-            //                button.btn.btn.btn-danger.deleteThumbnailButton(type='submit' style="margin-top:20px;margin-bottom:31px;")
-            //                    i.fa.fa-pencil
-            //                    | Delete Thumbnail!!!
-            //                br
-
-
+                                | Delete Thumbnail
 
 
             if !upload.webVTTPath
