--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -205,7 +205,7 @@ block content
                   br
                   label.fw(for="description" style="font-size:23px") Description
                   br
-                  textarea.fw.form-group(style="width:400px;max-width:95%;border-radius:4px;font-size:16px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
+                  textarea.fw.form-group(style="color:black;width:400px;max-width:95%;border-radius:4px;font-size:16px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
                 button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Upload
 
