user Inter if helvetica not available

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -222,7 +222,7 @@ style.
     }
 
     .fw {
-        font-weight: 300
+        font-weight: 300;
     }
 
     .loginHeader {
@@ -394,4 +394,12 @@ style.
         /*.postButton {*/
         /*display: none !important;*/
         /*}*/
+    }
+
+    .h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+        font-family: 'Helvetica Neue', 'Inter', Arial, sans-serif !important;
+    }
+
+    body {
+        font-family: 'Helvetica Neue', 'Inter', Arial, sans-serif !important;
     }
