--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -110,7 +110,7 @@ block content
                   h3.fw(style="font-size:30px;margin-bottom:15px;" id="uploadDetails") Upload Details
 
                   label.fw(style="font-size: 23px;" for='title') Title (*)
-                  input.form-group.center-block.text-center(style="width:400px;max-width:95%;border-radius:2px;font-size:20px;font-weight:300;" type="text" name="title" id="title" minlength=3, maxlength=100 required)
+                  input.form-group.center-block.text-center(style="max-width:600px;height:35px;border-radius:2px;font-size:20px;font-weight:300;" type="text" name="title" id="title" minlength=3, maxlength=100 required)
                   br
 
                   // add endpoint for visibility
@@ -203,9 +203,9 @@ block content
                         div.fw(style="width:400px;max-width:95%;margin:auto;") The instance host has chosen to make this instance Safe For Work only, please ensure that your upload is Safe For Work
 
                   br
-                  label.fw(for="description" style="font-size:23px") Description
+                  label.fw(for="description" style="font-size:23px;width:600px;") Description
                   br
-                  textarea.fw.form-group(style="color:black;width:400px;max-width:95%;border-radius:4px;font-size:16px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
+                  textarea.fw.form-group(style="color:black;max-width:600px;border-radius:4px;font-size:16px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
                 button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Upload
 
