--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,8 +15,10 @@ html
     meta(property='og:description', content=meta.description)
     meta(property='og:video', content=meta.video)
 
-
-    meta(name='twitter:card', content='summary')
+    // twitter meta tags
+    // trying out large card of twitter
+    meta(name='twitter:card', content='summary_large_image')
+    //meta(name='twitter:card', content='summary')
     meta(name='twitter:title', content=(meta.title || title))
     meta(name='twitter:description', content=meta.description || "An open-source file hosting platform")
     meta(name='twitter:image', content=meta.image)
