--- a/views/public/embed.pug
+++ b/views/public/embed.pug
@@ -15,7 +15,7 @@ html
 
 
         meta(name='twitter:card', content='summary')
-        meta(name='twitter:site', content='@nodetube_org')
+        meta(name='twitter:site', content='@newtube_app')
         meta(name='twitter:title', content=(meta.title || title))
         meta(name='twitter:description', content=meta.description)
         meta(name='twitter:image', content=meta.image)
