--- a/views/media.pug
+++ b/views/media.pug
@@ -643,14 +643,14 @@ block content
 
 
 
-                    if maxRatingAllowed !== 'SFW'
-                        if upload.rating
-                            if upload.rating == 'allAges'
-                                p.fw(style="margin-top:15px;font-size:12px;") Rating: Safe For Work
-                            if upload.rating == 'mature'
-                                p.fw(style="margin-top:15px;font-size:12px;") Rating: Not Safe For Work
-                            if upload.rating == 'sensitive'
-                                p.fw(style="margin-top:15px;font-size:12px;") Rating: Sensitive (18+)
+                    //if maxRatingAllowed !== 'SFW'
+                    //    if upload.rating
+                    //        if upload.rating == 'allAges'
+                    //            p.fw(style="margin-top:15px;font-size:12px;") Rating: Safe For Work
+                    //        if upload.rating == 'mature'
+                    //            p.fw(style="margin-top:15px;font-size:12px;") Rating: Not Safe For Work
+                    //        if upload.rating == 'sensitive'
+                    //            p.fw(style="margin-top:15px;font-size:12px;") Rating: Sensitive (18+)
 
 
                     if convertedRating !== 'SFW'
