--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -39,7 +39,9 @@ block content
       font-size:17px;
     }
 
-    .u
+    .descriptionTextArea {
+      max-width:95%;
+    }
   br
   div.center-block.text-center
       div.upload-information(style="margin-top:20px")
@@ -202,7 +204,7 @@ block content
                   br
                   label.fw(for="description" style="font-size:23px;width:600px;") Description
                   br
-                  textarea.fw.form-group(style="color:black;max-width:600px;border-radius:4px;font-size:19px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
+                  textarea.fw.form-group.descriptionTextArea(style="color:black;border-radius:4px;font-size:19px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
                 button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Upload
 
